name:               blorg
version:            0.2.1.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base
                  , hakyll
                  , filepath
                  , split
                  , text
  ghc-options:      -threaded
  default-language: Haskell2010
